--- a/proiect_daw_front/src/app/login-page/login-page.component.html
+++ b/proiect_daw_front/src/app/login-page/login-page.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="containe">
+  <div>
     <h2>Login</h2>
     <form (ngSubmit)="login()">
       <label for="username">Username:</label>
@@ -10,4 +11,5 @@
       <button type="submit">Login</button>
     </form>
   </div>
+</div>
   
